Fix contant-collapse padding-bottom

--- a/學習記錄/css/index.scss
+++ b/學習記錄/css/index.scss
@@ -118,6 +118,7 @@ html {
 .contant-collapse {
   position: relative;
   margin-bottom: 0px;
+  padding: 10px 10px 10px 10px;
   cursor: pointer;
   transition: all 0.3s;
 
